--- a/ReadHTMLPages/Airports/package.json
+++ b/ReadHTMLPages/Airports/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "lodash": "^4.17.14"
   }
 }
